Went over section 5. Comments are on Google Docs

--- a/jair.bib
+++ b/jair.bib
@@ -600,3 +600,41 @@
   year={2008},
   organization={Association for Computational Linguistics}
 }
+
+@article{zhang2014,
+ author = {Zhang, Lei and Rettinger, Achim},
+ title = {X-LiSA: Cross-lingual Semantic Annotation},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {August 2014},
+ volume = {7},
+ number = {13},
+ month = aug,
+ year = {2014},
+ issn = {2150-8097},
+ pages = {1693--1696},
+ numpages = {4},
+ url = {http://dx.doi.org/10.14778/2733004.2733063},
+ doi = {10.14778/2733004.2733063},
+ acmid = {2733063},
+ publisher = {VLDB Endowment},
+} 
+
+@article{levandowsky1971,
+	Annote = {10.1038/234034a0},
+	Author = {Levandowsky, Michael and Winter, David},
+	Date = {1971/11/05/print},
+	Date-Added = {2015-09-03 14:09:51 +0000},
+	Date-Modified = {2015-09-03 14:09:51 +0000},
+	Day = {05},
+	Journal = {Nature},
+	M3 = {10.1038/234034a0},
+	Month = {11},
+	Number = {5323},
+	Pages = {34--35},
+	Title = {Distance between Sets},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1038/234034a0},
+	Volume = {234},
+	Year = {1971},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/234034a0}
+}
